[project]
name = "mcp-getting-started"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "openai>=1.66.3",
]

[[tool.uv.index]]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true